<resources>
    <string name="app_name">Salwa Cookies</string>
    <string name="image">image</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Cart</string>
    <string name="title_notifications">Order</string>
    <string name="button">button</string>
    <string name="lorem100">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="pesan_sekarang">Pesan sekarang</string>
    <string name="total_harga_rp_199999">Total harga: Rp. 199999</string>
    <string name="total_produk_1_produk">Total produk : 1 produk</string>
    <string name="pembayaran">Payment</string>
    <string name="logout">logout</string>
    <string name="kecamatan">Kecamatan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delivery">Delivery</string>
    <string name="account">Account</string>
</resources>