<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.salwa.salwa.homepage.ui.home.ProductFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_product" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.salwa.salwa.homepage.ui.cart.CartFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_payment"
        android:name="com.salwa.salwa.homepage.ui.order.OrderFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/navigation_delivery"
        android:name="com.salwa.salwa.homepage.ui.delivery.DeliveryFragment"
        android:label="Delivery"
        tools:layout="@layout/fragment_delivery" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.salwa.salwa.homepage.ui.account.AccountFragment"
        android:label="Account"
        tools:layout="@layout/fragment_account" />


</navigation>